Closed Bug 124299 Opened 23 years ago Closed 23 years ago

infinite embedding webshell focus/activation recursion

Categories

(Core :: DOM: Navigation, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.9

People

(Reporter: danm.moz, Assigned: danm.moz)

Details

Attachments

(1 file)

Certain Unnamed Embedding Clients have noticed an infinite
focus/activate/focus/activate recursion on sites with onfocus handlers that
cause the window to be reactivated.
patch adapted from the 0.9.4 branch and (Netscape internal) bugscape bug 12000
.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9.9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: