stifle infinite focus/activation recursion. bug 124299 r=hyatt,jst